--- a/Fruit Ninja/MainScene.html
+++ b/Fruit Ninja/MainScene.html
@@ -27,7 +27,8 @@
 
 
 
-
+    init();
+    animate();
     function init() {
         // renderer initialization
         {
@@ -40,6 +41,21 @@
             renderer.shadowMap.enabled = true;
             renderer.shadowMap.type = THREE.PCFSoftShadowMap;
         }
+
+        // assign scene
+        scene = new THREE.Scene();
+
+        // camera setting
+        {
+            camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 0.01, 1000);
+            camera.position.set(1, 20, 70);
+            camera.lookAt(scene.position);
+        }
+    }
+
+    function animate() {
+        renderer.render(scene, camera);
+        requestAnimationFrame(animate);
     }
 </script>
 </html>
