fixed some bugs

--- a/Fruit Ninja/MainScene.html
+++ b/Fruit Ninja/MainScene.html
@@ -35,7 +35,7 @@
             renderer = new THREE.WebGLRenderer({
                 antialias: true
             });
-            renderer.setClearColor(new THREE.Color(0xcccccc));
+            renderer.setClearColor(new THREE.Color(0xcccc0cc));
             renderer.setSize(window.innerWidth, window.innerHeight);
             document.body.appendChild(renderer.domElement);
             renderer.shadowMap.enabled = true;
