--- a/Fruit Ninja/MainScene.html
+++ b/Fruit Ninja/MainScene.html
@@ -66,8 +66,10 @@
 
         // camera setting
         {
-            camera = new THREE.PerspectiveCamera(90, window.innerWidth / window.innerHeight, 0.01, 1000);
-            camera.position.set(1, 20, 70);
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.01, 1000);
+            camera.position.set(0, 0.286, -10.246);
+            camera.rotation.set(180, 0, 180);
+            camera.scale.set(0.508, 0.512, 1);
             camera.lookAt(scene.position);
         }
 
@@ -80,13 +82,17 @@
 
 
             // main light in the scene which can cast shadow
-            let spotLight = new THREE.SpotLight(0xffffff, 1, 1000, 1, 0.5, 0.5);
-            spotLight.position.set(0, 3, 50);
+            let spotLight = new THREE.SpotLight(0xffffff);
+            spotLight.position.set(0.687, -2.871, -27.974);
+            spotLight.intensity = 2;
+            spotLight.distance = 50;
+            spotLight.angle = 0.494;
+            spotLight.penumbra = 0.3;
             spotLight.castShadow = true;
             spotLight.shadow.camera.near = 8;
             spotLight.shadow.camera.far = 30;
             spotLight.shadow.mapSize.width = 1024;
-            spotLight.shadow.mapSize.height = 1024
+            spotLight.shadow.mapSize.height = 1024;
             scene.add(spotLight);
 
         }
@@ -94,12 +100,9 @@
         // backGround
         {
             // plane geometry which has the rule of backGround
-            backGround = getSurface(1850, 885);
-            backGround.rotateX(49.99);
-            backGround.rotateY(0.01);
-            backGround.position.z = -350;
-            backGround.position.x = -16;
-            backGround.position.y = -105;
+            backGround = getSurface(1.3, 1);
+            backGround.position.set(0, 0, 8.646);
+            backGround.scale.set(25.025, 15.937, 1);
             backGround.receiveShadow = true;
             scene.add(backGround);
 
@@ -118,13 +121,14 @@
     function getSurface(width, height)
     {
         let geometry = new THREE.PlaneGeometry(width, height);
+
         let material = new THREE.MeshPhongMaterial({
             map: dragon_texture,
-            //color: 0x3dff00,
             side: THREE.DoubleSide
         });
-        //material = new THREE.MeshBasicMaterial(0xff00cc);
-        let mesh = new THREE.Mesh(geometry, material);
+
+        let mesh = new THREE.Mesh(geometry, material, 1);
+
         return mesh;
     }
 
