--- a/Fruit Ninja/MainScene.html
+++ b/Fruit Ninja/MainScene.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="lib/OBJLoader.js"></script>
     <script type="text/javascript" src="lib/MTLLoader.js"></script>
     <script type="text/javascript" src="lib/GLTFLoader.js"></script>
-    <script type="text/javascript" src="lib/GPUParticleSystem.js"></script>
+    <script type="text/javascript" src="lib/cannon.js"></script>
+    <script type="text/javascript" src="lib/cannon.demo.js"></script>
     <style>
         body{
             margin: 0;
@@ -22,7 +23,7 @@
 <div id="WebGl-output"></div>
 </body>
 <script type="text/javascript">
-    var scene, renderer, camera;
+    var scene, renderer, camera, world;
     var active_texture;
 
     //light variables
@@ -70,6 +71,15 @@
     init();
     animate();
     function init() {
+
+        //world and physics
+        {
+            world = new CANNON.World();
+            world.gravity.set(0, -1, 0);
+            world.broadphase = new CANNON.NaiveBroadphase();
+        }
+
+
         // renderer initialization
         {
             renderer = new THREE.WebGLRenderer({
