--- a/Fruit Ninja/MainScene.html
+++ b/Fruit Ninja/MainScene.html
@@ -312,6 +312,8 @@
         // events
         {
             window.addEventListener('resize', onWindowResize, false);
+            window.addEventListener('keyup', onWindowKeyUp, false);
+
         }
 
     }
@@ -334,6 +336,31 @@
         pointLight2.intensity = Math.sin(t / 500) * 2;
         pointLight3.intensity = Math.sin(t / 500) * 2;
         pointLight4.intensity = Math.sin(t / 500) * 2;
+    }
+
+    // event for starting game
+    function onWindowKeyUp(event) {
+        if (event.keyCode == 32){
+            mainSound.play();
+            scene.remove(scoreText);
+            textGeometry = new THREE.TextGeometry("0", {
+                font: textFont,
+                size: 0.5,
+                height: 0.3,
+                curveSegments: 10,
+                bevelEnabled: false
+            });
+            THREE.GeometryUtils.center(textGeometry);
+            textMaterial = new THREE.MeshStandardMaterial({color: 0x00ffff});
+
+            scoreText = new THREE.Mesh(textGeometry, textMaterial);
+            scoreText.rotation.y = Math.PI;
+            scoreText.castShadow = true;
+            scoreText.position.x = 0;
+            scoreText.position.y = 3;
+            scene.add(scoreText);
+            spawnInterval = window.setInterval(spawner, 2000);
+        }
     }
 
     // a function for handling windows resize event
