--- a/Fruit Ninja/MainScene.html
+++ b/Fruit Ninja/MainScene.html
@@ -359,7 +359,7 @@
             scoreText.position.x = 0;
             scoreText.position.y = 3;
             scene.add(scoreText);
-            spawnInterval = window.setInterval(spawner, 2000);
+            //spawnInterval = window.setInterval(spawner, 2000);
         }
     }
 
